--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,8 @@
 {
-  "framework": "storybook",
-  "buildCommand": "storybook build"
+  "$schema": "https://openapi.vercel.sh/vercel.json",
+  "buildCommand": "npm run build-storybook",
+  "devCommand": "npm run storybook",
+  "installCommand": "npm install",
+  "framework": null,
+  "outputDirectory": "./storybook-static"
 }
